.kubernetes/01-service.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: m2a-backend
  name: m2a-backend
  labels:
    app: m2a-backend

spec:
  replicas: 3
  selector:
    matchLabels:
      app: m2a-backend
  template:
    metadata:
      labels:
        app: m2a-backend
    spec:
      containers:
        - name: m2a-backend
          image: $image_name
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - mountPath: "/app/uploads-volume"
              name: volume
              readOnly: false
      imagePullSecrets:
        - name: secret-dockerconfigjson
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: azure-managed-disk
---
apiVersion: v1
kind: Service
metadata:
  namespace: m2a-backend
  name: m2a-backend

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: m2a-backend
