.kubernetes/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m2a-backend-ingress
  namespace: m2a-backend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/issuer: "m2a-backend-http"
spec:
  tls:
    - hosts:
        - m2a-back.jaipasraisonla.team
      secretName: tls-m2a-back-ingress-http
  rules:
    - host: m2a-back.jaipasraisonla.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: m2a-backend
                port:
                  name: web
